--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyDZRKexcAdVYfa0Vg_AEKHo_WXHnwocJXY",
+        authDomain: "anonymouschat-6df30.firebaseapp.com",
+        databaseURL: "https://anonymouschat-6df30.firebaseio.com",
+        projectId: "anonymouschat-6df30",
+        storageBucket: "anonymouschat-6df30.appspot.com",
+        messagingSenderId: "619516076272",
+        appId: "1:619516076272:web:72785d0ef937374e566235"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
