--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
     <title>Lask</title>
     <!-- font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <style>
+    body{
+      margin: 0;
+    }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
